--- a/src/components/Test/Test.scss
+++ b/src/components/Test/Test.scss
@@ -1,5 +1,8 @@
-.test{
-    font-size: 20px;
-    color: rebeccapurple;
-    border: 1px solid orchid;
+.mainDiv {
+    background-color: olivedrab;
+    text-align: center;
+    width: 100px;
+    max-height: 85px;
+    min-height: 85px;
+    overflow-y: hidden;
 }
