--- a/src/components/Test/carousel.scss
+++ b/src/components/Test/carousel.scss
@@ -13,6 +13,7 @@
 
     &-item {
         display: inline-block;
+        text-align: center;
         width: 100px;
         border: 1px solid black;
     }
