--- a/src/components/Test/carousel.scss
+++ b/src/components/Test/carousel.scss
@@ -1,20 +1,40 @@
 .carousel {
-    width: 900px;
-    height: 100px;
-    border: 1px solid red;
-    white-space: nowrap;
-    overflow: hidden;
-    position: relative;
+    position: absolute;
+    left: 10%;
+    right: 10%;
+    top: 10px;
+
+    &-viewport {
+        position: relative;
+        height: 75px;
+        border: 1px solid red;
+        overflow: hidden;
+    }
+
+    &-film {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 9999px;
+    }
 
     &-container {
         position: absolute;
+        top: 0;
         transition: left .3s ease-in-out
     }
 
     &-item {
-        display: inline-block;
-        text-align: center;
+        float: left;
+        margin-right: 10px;
+        display: block;
         width: 100px;
+        text-align: center;
         border: 1px solid black;
+        height: 73px;
+
+        &-active {
+            background-color: green;
+        }
     }
 }
